<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bluetooth"
        android:icon="@drawable/ic_settings_bluetooth_black_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_bluetooth" />

    <item
        android:id="@+id/action_fight_list"
        android:icon="@drawable/ic_view_list_black_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_fight_list" />
    <item
        android:id="@+id/action_fight_info"
        android:icon="@drawable/ic_gavel_black_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:title="@string/title_fight_view" />
</menu>